# lazy-dispatchrr

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
docs/: rust_curriculum.md
lazy-dispatchrr-lesson-plan/: 00-environment-setup.md  01-rust-fundamentals.md  02-structs-enums-patterns.md  03-error-handling.md  04-modules-and-structure.md  05-collections-iterators-closures.md  06-traits-and-implementations.md  07-strings.md  08-serde-serialization.md  09-file-io-config.md  10-external-processes.md  11-domain-modeling.md  12-tui-setup-layout.md  13-tui-widgets-rendering.md  14-event-loop-input.md  15-app-state.md  16-focus-and-navigation.md  17-popups-and-modals.md  18-fuzzy-search.md  19-dispatch-and-replays.md  20-build-scripts-polish.md  21-capstone.md  README.md
src/: app.rs  config.rs  domain.rs  event.rs  main.rs  ui.rs
src/docs/: gh.rs  gh_cli_commands.md
src/service/: github.rs  mod.rs
