[package]
name = "lazy-dispatchr"
version = "0.1.0"
edition = "2024"
authors = ["Artur Kaminski <artxk92@gmail.com>"]
description = "A TUI app for dispatching Github Workflows"
license = "GPL-3.0-only"
repository = ""
readme = "README.md"
keywords = ["tui", "gha", "github", "workflows"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

